# seam-carving

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
libraries/SeamCarver/: CMakeLists.txt
libraries/SeamCarver/include/: SeamCarver.hpp
libraries/SeamCarver/src/: SeamCarver.cpp
libraries/SeamCarver/tests/: test.cpp
